--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <br>Sometimes I make pull requests to other projects on my <a href="https://github.com/krathalan">Github</a>.</p>
 
 <p>Contact me at <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a>
-<br>7DC5 473C CBFB 267E 3784 5BB5 C13F 30D5 2245 E5B1</p>
+<br><a href="hunteratkrathalandotnet.pgp">7574 047B B5BC 1C35 EFD1  11E5 DD07 9BCE 2A6F 75BC</a></p>
 
 </body>
 </html>
