Attempt to improve mobile rendering

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <base target="_blank" rel="noopener noreferrer">
 <style>
     body {
-        width: 50em;
+        width: 50vm;
         margin: 0 auto;
         font-family: sans-serif;
     }
@@ -15,6 +15,7 @@
 </head>
 <body>
 
+<div style="text-align:center">
 <h1>Hunter Peavey</h1>
 
 <p>I am a radiography student at Pima Medical Institute in Seattle, WA.
@@ -26,6 +27,7 @@
 
 <p>Contact me at <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a>
 <br><a href="hunteratkrathalandotnet.asc">7574 047B B5BC 1C35 EFD1  11E5 DD07 9BCE 2A6F 75BC</a></p>
+</div>
 
 </body>
 </html>
