--- a/index.html
+++ b/index.html
@@ -5,17 +5,32 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>krathalan.net</title>
 <base target="_blank" rel="noopener noreferrer">
-<style>
-    body {
-        width: 50vm;
-        margin: 0 auto;
-        font-family: sans-serif;
-    }
-</style>
 </head>
+<link rel='stylesheet' type='text/css' href='index.css'>
 <body>
 
-<div style="text-align:center">
+<!--
+     Copyright (C) 2020 Hunter Peavey
+
+     Permission is hereby granted, free of charge, to any person obtaining a copy
+     of this software and associated documentation files (the "Software"), to deal
+     in the Software without restriction, including without limitation the rights
+     to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+     copies of the Software, and to permit persons to whom the Software is
+     furnished to do so, subject to the following conditions:
+
+     The above copyright notice and this permission notice shall be included in all
+     copies or substantial portions of the Software.
+
+     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+     IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+     FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+     AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+     LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+     SOFTWARE.
+-->
+
 <h1>Hunter Peavey</h1>
 
 <p>I am a radiography student at Pima Medical Institute in Seattle, WA.
@@ -27,7 +42,6 @@
 
 <p>Contact me at <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a>
 <br><a href="hunteratkrathalandotnet.asc">7574 047B B5BC 1C35 EFD1  11E5 DD07 9BCE 2A6F 75BC</a></p>
-</div>
 
 </body>
 </html>
