Fix keys display

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <br>Sometimes I make pull requests to other projects on my <a href="https://github.com/krathalan">Github</a>.</p>
 
 <p>Contact me at <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a>
-<br><a href="hunteratkrathalandotnet.asc">7574 047B B5BC 1C35 EFD1  11E5 DD07 9BCE 2A6F 75BC</a></p>
+<br><a href="keys/hunter.asc">7574 047B B5BC 1C35 EFD1  11E5 DD07 9BCE 2A6F 75BC</a></p>
 
 </body>
 </html>
