Update html with w3 validator fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>krathalan.net</title>
-<base target="_blank" rel="noopener noreferrer">
+<base target="_blank">
 <link rel='stylesheet' type='text/css' href='index.css'>
 </head>
 
@@ -31,10 +31,10 @@
 
 <p>I am a radiography student at Pima Medical Institute in Seattle, WA.
 <br>I am passionate about free software, and I work on a number of free software projects.
-<br>My main project is <a href="https://git.sr.ht/~krathalan/wtwitch">wtwitch</a>, a cli tool for browsing and watching streams on Twitch.tv.</p>
+<br>My main project is <a href="https://git.sr.ht/~krathalan/wtwitch" rel="noopener noreferrer">wtwitch</a>, a cli tool for browsing and watching streams on Twitch.tv.</p>
 
-<p>All of the software I make is available at <a href="https://git.sr.ht/~krathalan">sourcehut</a>.
-<br>Sometimes I make pull requests to other projects on my <a href="https://github.com/krathalan">Github</a>.</p>
+<p>All of the software I make is available at <a href="https://git.sr.ht/~krathalan" rel="noopener noreferrer">sourcehut</a>.
+<br>Sometimes I make pull requests to other projects on my <a href="https://github.com/krathalan" rel="noopener noreferrer">Github</a>.</p>
 
 <p>Contact me at <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a>
 <br><a href="keys/hunter.asc">7574 047B B5BC 1C35 EFD1  11E5 DD07 9BCE 2A6F 75BC</a></p>
