Add srht@krathalan.net email

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
 <p>All of the software I make is available at <a href="https://git.sr.ht/~krathalan" rel="noopener noreferrer">sourcehut</a>.
 <br>Sometimes I make pull requests to other projects on my <a href="https://github.com/krathalan" rel="noopener noreferrer">Github</a>.</p>
 
-<p>Contact me at <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a>
-<br><a href="keys/hunter.asc">7574 047B B5BC 1C35 EFD1  11E5 DD07 9BCE 2A6F 75BC</a></p>
+<h4>Contact me</h4>
+
+<p>Software-related inquiries: <a href="mailto:srht@krathalan.net">srht@krathalan.net</a> / <a href="keys/srht.asc">B46B 3262 73E4 A1D2 1AAA 3F6F 529A C100 50BD 24EF</a></p>
+
+<p>Other inquiries: <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a> / <a href="keys/hunter.asc">7574 047B B5BC 1C35 EFD1 11E5 DD07 9BCE 2A6F 75BC</a></p>
 
 </body>
 </html>
