Indent everything properly; add small note about pandoc to wtwitch.html

--- a/index.html
+++ b/index.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>krathalan.net</title>
-<base target="_blank">
-<link rel='stylesheet' type='text/css' href='index.css'>
-</head>
+     <!--
+          Homepage for krathalan.net
+          Source: https://git.sr.ht/~krathalan/krathalan.net
+          Copyright (C) 2020 Hunter Peavey
 
-<!--
-     Copyright (C) 2020 Hunter Peavey
+          This program is free software: you can redistribute it and/or modify
+          it under the terms of the GNU General Public License as published by
+          the Free Software Foundation, either version 3 of the License, or
+          (at your option) any later version.
 
-     This program is free software: you can redistribute it and/or modify
-     it under the terms of the GNU General Public License as published by
-     the Free Software Foundation, either version 3 of the License, or
-     (at your option) any later version.
+          This program is distributed in the hope that it will be useful,
+          but WITHOUT ANY WARRANTY; without even the implied warranty of
+          MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+          GNU General Public License for more details.
 
-     This program is distributed in the hope that it will be useful,
-     but WITHOUT ANY WARRANTY; without even the implied warranty of
-     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-     GNU General Public License for more details.
+          You should have received a copy of the GNU General Public License
+          along with this program.  If not, see <https://www.gnu.org/licenses/>.
+     -->
 
-     You should have received a copy of the GNU General Public License
-     along with this program.  If not, see <https://www.gnu.org/licenses/>.
--->
+     <head>
+          <meta charset="utf-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <title>krathalan.net</title>
+          <base target="_blank">
+          <link rel='stylesheet' type='text/css' href='index.css'>
+     </head>
 
-<body>
+     <body>
+          <h1>Hunter Peavey</h1>
 
-<h1>Hunter Peavey</h1>
+          <p>
+               I am a radiography student at Pima Medical Institute in Seattle, WA.
+               <br>I am passionate about free software, and I work on a number of free software projects.
+               <br>My main project is <a href="https://git.sr.ht/~krathalan/wtwitch" rel="noopener noreferrer">wtwitch</a>, a cli tool for browsing and watching streams on Twitch.tv.
+          </p>
 
-<p>I am a radiography student at Pima Medical Institute in Seattle, WA.
-<br>I am passionate about free software, and I work on a number of free software projects.
-<br>My main project is <a href="https://git.sr.ht/~krathalan/wtwitch" rel="noopener noreferrer">wtwitch</a>, a cli tool for browsing and watching streams on Twitch.tv.</p>
+          <p>
+               All of the software I make is available at <a href="https://git.sr.ht/~krathalan" rel="noopener noreferrer">sourcehut</a>.
+               <br>Sometimes I make pull requests to other projects on my <a href="https://github.com/krathalan" rel="noopener noreferrer">Github</a>.
+          </p>
 
-<p>All of the software I make is available at <a href="https://git.sr.ht/~krathalan" rel="noopener noreferrer">sourcehut</a>.
-<br>Sometimes I make pull requests to other projects on my <a href="https://github.com/krathalan" rel="noopener noreferrer">Github</a>.</p>
+          <h4>Contact me</h4>
 
-<h4>Contact me</h4>
+          <p>
+               Software-related inquiries: <a href="mailto:srht@krathalan.net">srht@krathalan.net</a> / <a href="keys/srht.asc">B46B 3262 73E4 A1D2 1AAA 3F6F 529A C100 50BD 24EF</a>
+          </p>
 
-<p>Software-related inquiries: <a href="mailto:srht@krathalan.net">srht@krathalan.net</a> / <a href="keys/srht.asc">B46B 3262 73E4 A1D2 1AAA 3F6F 529A C100 50BD 24EF</a></p>
-
-<p>Other inquiries: <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a> / <a href="keys/hunter.asc">7574 047B B5BC 1C35 EFD1 11E5 DD07 9BCE 2A6F 75BC</a></p>
-
-</body>
+          <p>
+               Other inquiries: <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a> / <a href="keys/hunter.asc">7574 047B B5BC 1C35 EFD1 11E5 DD07 9BCE 2A6F 75BC</a>
+          </p>
+     </body>
 </html>
