Add liberapay stuff

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      </head>
 
      <body>
-          <h1>Hunter Peavey</h1>
+          <h1>Hunter Peavey</h1> <img src="https://img.shields.io/liberapay/receives/krathalan.svg?logo=liberapay">
 
           <p>
                I am a radiography student at Pima Medical Institute in Seattle, WA.
@@ -50,5 +50,7 @@
           <p>
                Other inquiries: <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a> / <a href="keys/hunter.asc">7574 047B B5BC 1C35 EFD1 11E5 DD07 9BCE 2A6F 75BC</a>
           </p>
+
+          <a href="https://liberapay.com/krathalan/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a>
      </body>
 </html>
