Remove top liberapay image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      </head>
 
      <body>
-          <h1>Hunter Peavey</h1> <img src="https://img.shields.io/liberapay/receives/krathalan.svg?logo=liberapay">
+          <h1>Hunter Peavey</h1>
 
           <p>
                I am a radiography student at Pima Medical Institute in Seattle, WA.
