--- a/builds.html
+++ b/builds.html
@@ -22,7 +22,7 @@
      <head>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>builds.krathalan.net</title>
+          <title>Krath's builds</title>
           <base target="_blank">
           <link rel='stylesheet' type='text/css' href='index.css'>
      </head>
@@ -50,7 +50,7 @@
                     <br>Server = https://builds.krathalan.net/$arch</p>
 
                <p>You will need to add my GPG key to your pacman keyring and trust it:</p>
-               
+
                     <p style="margin-left:50px; margin-right:50px;">$ curl -O https://builds.krathalan.net/keys/srht.asc
                     <br>$ sudo -s
                     <br># pacman-key -a srht.asc
