See previous commit

--- a/builds.html
+++ b/builds.html
@@ -28,7 +28,7 @@
      </head>
 
      <body>
-          <h1>builds.krathalan.net</h1>
+          <h1>Krath's builds</h1>
 
           <p>
                You can find packages for Arch Linux here. You may either browse and download the packages and signatures manually, or add the repo to your <b>/etc/pacman.conf</b>.
