Reduce font size; attempt to fix builds.html indenting again

--- a/builds.html
+++ b/builds.html
@@ -46,15 +46,15 @@
           <p>
                Add the following snippet to your <b>/etc/pacman.conf</b>:</p>
 
-                    <p style="margin-left:50px; margin-right:50px;">[krathalan]
-                    <br>Server = https://builds.krathalan.net/$arch</p>
+                    <blockquote>[krathalan]
+                    <br>Server = https://builds.krathalan.net/$arch</blockquote>
 
                <p>You will need to add my GPG key to your pacman keyring and trust it:</p>
 
-                    <p style="margin-left:50px; margin-right:50px;">$ curl -O https://builds.krathalan.net/keys/srht.asc
+                    <blockquote>$ curl -O https://builds.krathalan.net/keys/srht.asc
                     <br>$ sudo -s
                     <br># pacman-key -a srht.asc
-                    <br># pacman-key --edit-key B46B326273E4A1D21AAA3F6F529AC10050BD24EF</p>
+                    <br># pacman-key --edit-key B46B326273E4A1D21AAA3F6F529AC10050BD24EF</blockquote>
 
                <p>Then trust the key, save, and exit. Now you can <b>pacman -Syu</b> and get some packages.
           </p>
