--- a/builds.html
+++ b/builds.html
@@ -23,15 +23,16 @@
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Krath's builds</title>
-          <base target="_blank">
           <link rel='stylesheet' type='text/css' href='index.css'>
      </head>
 
      <body>
           <h1>Krath's builds</h1>
 
+          <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
+
           <p>
-               You can find packages for Arch Linux here. You may either browse and download the packages and signatures manually, or add the repo to your <b>/etc/pacman.conf</b>.
+               You can find packages I have built for for Arch Linux here. You may either browse and download the packages and signatures manually, or add the repo to your <b>/etc/pacman.conf</b>.
           </p>
 
           <h2>Browse</h2>
