--- a/fdroid.html
+++ b/fdroid.html
@@ -22,16 +22,17 @@
      <head>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>fdroid.krathalan.net</title>
-          <base target="_blank">
+          <title>Krath's F-Droid repo</title>
           <link rel='stylesheet' type='text/css' href='index.css'>
      </head>
 
      <body>
-          <h1>Krath's F-Droid Server</h1>
+          <h1>Krath's F-Droid repo</h1>
+
+          <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a></h3>
 
           <p>
-               This is my personal F-Droid server. It is not intended for anybody to use, but you may use it if you wish.
+               This is my personal F-Droid repo. It is not intended for anybody to use, but you may use it if you wish.
           </p>
 
           <p>
