--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
      <head>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>krathalan.net</title>
-          <base target="_blank">
+          <title>Krath's hearth</title>
           <link rel='stylesheet' type='text/css' href='index.css'>
      </head>
 
      <body>
           <h1>Hunter Peavey</h1>
+
+          <h3><a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a> / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-droid</a></h3>
 
           <p>
                I am a radiography student at Pima Medical Institute in Seattle, WA.
