Add more clarity to what page you're on

--- a/builds.html
+++ b/builds.html
@@ -29,7 +29,7 @@
      <body>
           <h1>Krath's builds</h1>
 
-          <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
+          <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / [Builds] / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
 
           <p>
                You can find packages I have built for for Arch Linux here. You may either browse and download the packages and signatures manually, or add the repo to your <b>/etc/pacman.conf</b>.
