--- a/fdroid.html
+++ b/fdroid.html
@@ -29,7 +29,7 @@
      <body>
           <h1>Krath's F-Droid repo</h1>
 
-          <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a></h3>
+          <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a> / [F-Droid]</h3>
 
           <p>
                This is my personal F-Droid repo. It is not intended for anybody to use, but you may use it if you wish.
