--- a/builds.html
+++ b/builds.html
@@ -38,9 +38,8 @@
           <h2>Modifications</h2>
 
           <p>
-               Three available packages are built with modifications to their PKGBUILD and/or other files, or different-than-default configuration options (click to see patches for that package):
+               Two available packages are built with modifications to their PKGBUILD and/or other files, or different-than-default configuration options (click to see patches for that package):
                <ul>
-                    <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/linux-mainline" rel="noopener noreferrer" target="_blank">linux-mainline</a>: only supports AMD/Intel CPUs, stronger ASLR (like linux-hardened)<sup>[<a href="https://wiki.archlinux.org/index.php/Security#Userspace_ASLR_comparison" rel="noopener noreferrer" target="_blank">↗</a>]</sup>, GCC plugins (entropy+randstruct), no kexec/SMACK/SELinux/Tomoyo support</li>
                     <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/ungoogled-chromium" rel="noopener noreferrer" target="_blank">ungoogled-chromium</a>: enable ozone flags</li>
                     <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/wine-tkg-git" rel="noopener noreferrer" target="_blank">wine-tkg-git</a>: proton patches, -march=znver2<sup>[<a href="https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html" rel="noopener noreferrer" target="_blank">↗</a>]</sup></li>
                </ul>
