Update builds page to display archived packages

--- a/builds.html
+++ b/builds.html
@@ -54,6 +54,9 @@
           <p>
                x86_64 packages: <a href=https://builds.krathalan.net/x86_64/>https://builds.krathalan.net/x86_64/</a>
           </p>
+          <p>
+               <b>Outdated</b> packages (archive): <a href=https://builds.krathalan.net/archive/>https://builds.krathalan.net/archive/</a>
+          </p>
 
           <h2>Add to pacman</h2>
 
