--- a/builds.html
+++ b/builds.html
@@ -38,11 +38,11 @@
           <h2>Modifications</h2>
 
           <p>
-               Two available packages are built with modifications to their PKGBUILD and/or other files, or different-than-default configuration options (click to see patches for that package):
+               Some packages are built with modifications to their PKGBUILD and/or other files, or different-than-default configuration options (click to see patches for that package):
                <ul>
-                    <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/ungoogled-chromium" rel="noopener noreferrer" target="_blank">ungoogled-chromium</a>: enable ozone flags</li>
                     <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/wine-tkg-git" rel="noopener noreferrer" target="_blank">wine-tkg-git</a>: proton patches, -march=znver2<sup>[<a href="https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html" rel="noopener noreferrer" target="_blank">↗</a>]</sup></li>
                </ul>
+               This list may change.
           </p>
 
           <p>
