--- a/builds.html
+++ b/builds.html
@@ -35,6 +35,10 @@
                You can find packages I have built for for Arch Linux here. You may either browse and download the packages and signatures manually, or add the repo to your <b>/etc/pacman.conf</b>.
           </p>
 
+          <p>
+               All packages are free software except for the <b>minecraft-launcher</b> and <b>minecraft-server</b> packages.
+          </p>
+
           <h2>Modifications</h2>
 
           <p>
@@ -42,7 +46,14 @@
                <ul>
                     <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/wine-tkg-git" rel="noopener noreferrer" target="_blank">wine-tkg-git</a>: proton patches, -march=znver2<sup>[<a href="https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html" rel="noopener noreferrer" target="_blank">↗</a>]</sup></li>
                </ul>
+          </p>
+
+          <p>
                This list may change.
+          </p>
+
+          <p>
+               Ungoogled Chromium now ships with Ozone by default: <a href="https://wiki.archlinux.org/index.php/Chromium#Native_Wayland_support" rel="noopener noreferrer" target="_blank">https://wiki.archlinux.org/index.php/Chromium#Native_Wayland_support</a>
           </p>
 
           <p>
@@ -55,7 +66,7 @@
                x86_64 packages: <a href=https://builds.krathalan.net/x86_64/>https://builds.krathalan.net/x86_64/</a>
           </p>
           <p>
-               <b>Outdated</b> packages (archive): <a href=https://builds.krathalan.net/archive/>https://builds.krathalan.net/archive/</a>
+               <b>Old</b>, known-working Wine packages: <a href=https://builds.krathalan.net/archive/>https://builds.krathalan.net/archive/</a>
           </p>
 
           <h2>Add to pacman</h2>
