--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
      </head>
 
      <body>
-          <h1>Hunter Peavey</h1>
+          <h1 style="text-align:center">Hunter Peavey</h1>
 
-          <h3>[Home] / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a> / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
+          <h3 style="text-align:center">[Home] / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a> / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
 
           <p>
                I am a radiography student at Pima Medical Institute in Seattle, WA.
