Attempt to fix centering

--- a/fdroid.html
+++ b/fdroid.html
@@ -24,12 +24,16 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Krath's F-Droid repo</title>
           <link rel='stylesheet' type='text/css' href='index.css'>
+          <style>
+               div {text-align: center;}
+          </style>
      </head>
 
      <body>
-          <h1 style="text-align:center">Krath's F-Droid repo</h1>
-
-          <h3 style="text-align:center"><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a> / [F-Droid]</h3>
+          <div>
+               <h1>Krath's F-Droid repo</h1>
+               <h3 style="text-align:center"><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a> / [F-Droid]</h3>
+          </div>
 
           <p>
                This is my personal F-Droid repo. It is not intended for anybody to use, but you may use it if you wish.
