--- a/builds.html
+++ b/builds.html
@@ -24,12 +24,16 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Krath's builds</title>
           <link rel='stylesheet' type='text/css' href='index.css'>
+          <style>
+               div {text-align: center;}
+          </style>
      </head>
 
      <body>
-          <h1 style="text-align:center">Krath's builds</h1>
-
-          <h3 style="text-align:center"><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / [Builds] / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
+          <div>
+          <h1>Krath's builds</h1>
+          <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / [Builds] / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
+          </div>
 
           <p>
                You can find packages I have built for for Arch Linux here. You may either browse and download the packages and signatures manually, or add the repo to your <b>/etc/pacman.conf</b>.
