See previous commit

--- a/builds.html
+++ b/builds.html
@@ -24,13 +24,10 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Krath's builds</title>
           <link rel='stylesheet' type='text/css' href='index.css'>
-          <style>
-               div {text-align: center;}
-          </style>
      </head>
 
      <body>
-          <div>
+          <div id="inner">
           <h1>Krath's builds</h1>
           <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / [Builds] / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
           </div>
