--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Krath's hearth</title>
           <link rel='stylesheet' type='text/css' href='index.css'>
-          <style>
-               div {text-align: center;}
-          </style>
      </head>
 
      <body>
-          <div>
+          <div id="inner">
                <h1>Hunter Peavey</h1>
                <h3>[Home] / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a> / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
           </div>
