--- a/builds.html
+++ b/builds.html
@@ -46,7 +46,7 @@
                Some packages are built with modifications to their PKGBUILD and/or other files, or different-than-default configuration options (click to see patches for that package):
                <ul>
                     <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/wine-tkg-git" rel="noopener noreferrer" target="_blank">wine-tkg-git</a>: proton patches, disable futex2, -march=znver2<sup>[<a href="https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html" rel="noopener noreferrer" target="_blank">↗</a>]</sup></li>
-                    <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/plata-theme" rel="noopener noreferrer" target="_blank">plata-theme</a>: dark color scheme with green accents<sup>[<a href="https://builds.krathalan.net/plata-theme.jpg" rel="noopener noreferrer" target="_blank">↗</a>]</sup> and disable desktop environments I don't use</li>
+                    <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/plata-theme" rel="noopener noreferrer" target="_blank">plata-theme</a>: dark color scheme with green accents<sup>[<a href="https://builds.krathalan.net/plata1.avif" rel="noopener noreferrer" target="_blank">1</a>, <a href="https://builds.krathalan.net/plata2.avif" rel="noopener noreferrer" target="_blank">1</a>]</sup> and disable desktop environments I don't use</li>
                </ul>
           </p>
 
