Minor builds.html update

--- a/builds.html
+++ b/builds.html
@@ -75,7 +75,7 @@
                     <blockquote>[krathalan]
                     <br>Server = https://builds.krathalan.net/$arch</blockquote>
 
-               <p>You will need to add my GPG key to your pacman keyring and trust it:</p>
+               <p>You will need to add my GPG keys to your pacman keyring and trust them:</p>
 
                     <blockquote>$ curl -O "https://builds.krathalan.net/keys/builder.asc" -O "https://builds.krathalan.net/keys/srht.asc"
                     <br>$ sudo -s
