--- a/builds.html
+++ b/builds.html
@@ -29,7 +29,7 @@
      <body>
           <div id="inner">
           <h1>Krath's builds</h1>
-          <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / [Builds] / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
+          <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / [Builds]</h3>
           </div>
 
           <p>
