--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      <body>
           <div id="inner">
                <h1>Hunter Peavey</h1>
-               <h3>[Home] / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a> / <a href="https://fdroid.krathalan.net/" rel="noopener noreferrer">F-Droid</a></h3>
+               <h3>[Home] / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a></h3>
           </div>
 
           <p>
