--- a/builds.html
+++ b/builds.html
@@ -37,7 +37,7 @@
           </p>
 
           <p>
-               All packages here are free software except for the <b>minecraft-launcher</b> and <b>minecraft-server</b> packages.
+               All packages hosted here are free software.
           </p>
 
           <h2>Modifications</h2>
