Update index.html with a short list of my best projects

--- a/index.html
+++ b/index.html
@@ -33,14 +33,39 @@
           </div>
 
           <p>
-               I am a radiography student at Pima Medical Institute in Seattle, WA.
-               <br>I am passionate about free software, and I work on a number of free software projects.
-               <br>My main project is <a href="https://git.sr.ht/~krathalan/wtwitch" rel="noopener noreferrer">wtwitch</a>, a cli tool for browsing and watching streams on Twitch.tv.
+               I am a radiography student at Pima Medical Institute in Seattle, WA. I am passionate about free software, and I work on a number of free software projects.
           </p>
 
+          <h2>Projects</h2>
+
           <p>
-               All of the software I make is available at <a href="https://git.sr.ht/~krathalan" rel="noopener noreferrer">sourcehut</a>.
-               <br>Sometimes I make pull requests to other projects on my <a href="https://github.com/krathalan" rel="noopener noreferrer">Github</a>.
+               All of the software I make is available on <a href="https://github.com/krathalan" rel="noopener noreferrer">my Github</a>. The projects below are some of the projects I am most proud of.
+          </p>
+
+          <h3><a href="https://github.com/krathalan/wtwitch" rel="noopener noreferrer">wtwitch</a></h3>
+
+          <img src="wtwitch-screenshot.jpg" alt="A terminal window showing the output of [wtwitch c]" width=70%>
+          <p>
+               Wtwitch is a command line interface for browsing and watching Twitch streams. You can view the top streams, the top games, the top streams for a given game, search games, search streams, and subscribe to streamers, all without a Twitch account. (Note: subscribing with wtwitch is different from a "Twitch sub"; with wtwitch, subscribing simply means you can easily check the status of all of your subscriptions at any given time.)
+          </p>
+
+          <h3><a href="https://github.com/krathalan/krack" rel="noopener noreferrer">krack</a></h3>
+
+          <img src="krack-build.jpg" alt="Multiple terminal windows showing the output of: [krackctl watch-status], [krackctl failed-builds], [watch ccache -s], and [watch sensors]" width=80%>
+          <p>
+               Krack is a set of programs for automated Arch Linux package builds, and powers builds.krathalan.net. Krack creates hooks at multiple points in the build process for each package that execute user-defined scripts, similar to pacman hooks but with less configuration required. Krack also includes advanced logging features that will help you easily diagnose any build problems.
+          </p>
+
+          <h3><a href="https://github.com/krathalan/apparmor-profiles" rel="noopener noreferrer">apparmor-profiles</a></h3>
+
+          <p>
+               A semi-large collection of AppArmor profiles for Arch Linux. Includes profiles for both desktop and server software.
+          </p>
+
+          <h3><a href="https://github.com/krathalan/systemd-sandboxing" rel="noopener noreferrer">systemd-sandboxing</a></h3>
+
+          <p>
+               A smaller collection of systemd drop-ins for hardening system services, particularly for server-oriented software.
           </p>
 
           <h4>Contact me</h4>
