--- a/builds.html
+++ b/builds.html
@@ -79,12 +79,12 @@
 
                <p>You will need to add my GPG keys to your pacman keyring and trust them:</p>
 
-                    <blockquote>$ curl -O "https://builds.krathalan.net/keys/builder.asc" -O "https://builds.krathalan.net/keys/srht.asc"
+                    <blockquote>$ curl -O "https://builds.krathalan.net/keys/builder.asc" -O "https://builds.krathalan.net/keys/dev.asc"
                     <br>$ sudo -s
-                    <br># pacman-key -a builder.asc srht.asc
-                    <br># pacman-key --edit-key 1C52FC395F059E60180BB53BCD9097F0E64296BB</blockquote>
+                    <br># pacman-key -a builder.asc dev.asc
+                    <br># pacman-key --edit-key D2D9A0CB716A42FD69C3C1F25276DE8F86AD8A8A</blockquote>
 
-               <p>Then trust the key, save, and exit. Do the same for B46B326273E4A1D21AAA3F6F529AC10050BD24EF. Now you can <b>pacman -Syu</b> and get some packages.
+               <p>Then trust the key, save, and exit. Do the same for 0C6B73F391FA26F0EBCD1F75C0F9AEE56E47D174. Now you can <b>pacman -Syu</b> and get some packages.
           </p>
 
           <h4>Contact me</h4>
