Update builder signing key

--- a/builds.html
+++ b/builds.html
@@ -82,7 +82,7 @@
                     <blockquote>$ curl -O "https://builds.krathalan.net/keys/builder.asc" -O "https://builds.krathalan.net/keys/dev.asc"
                     <br>$ sudo -s
                     <br># pacman-key -a builder.asc dev.asc
-                    <br># pacman-key --edit-key D2D9A0CB716A42FD69C3C1F25276DE8F86AD8A8A</blockquote>
+                    <br># pacman-key --edit-key A78555FE54802333B8459100ACAA0A5F857B948C</blockquote>
 
                <p>Then trust the key, save, and exit. Do the same for 0C6B73F391FA26F0EBCD1F75C0F9AEE56E47D174. Now you can <b>pacman -Syu</b> and get some packages.
           </p>
@@ -90,7 +90,7 @@
           <h4>Contact me</h4>
 
           <p>
-               About this repo/any hosted packages: <a href="mailto:srht@krathalan.net">srht@krathalan.net</a> / <a href="keys/srht.asc">B46B 3262 73E4 A1D2 1AAA 3F6F 529A C100 50BD 24EF</a>
+               About this repo/any hosted packages: <a href="mailto:dev@krathalan.net">srht@krathalan.net</a> / <a href="keys/dev.asc">0C6B 73F3 91FA 26F0 EBCD 1F75 C0F9 AEE5 6E47 D174</a>
           </p>
 
           <a href="https://liberapay.com/krathalan/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a>
