Finish updating to dev@krathalan.net; switch to purple theme; update package modifications

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <h4>Contact me</h4>
 
           <p>
-               Software-related inquiries: <a href="mailto:dev@krathalan.net">srht@krathalan.net</a> / <a href="keys/dev.asc">0C6B 73F3 91FA 26F0 EBCD 1F75 C0F9 AEE5 6E47 D174</a>
+               Software-related inquiries: <a href="mailto:dev@krathalan.net">dev@krathalan.net</a> / <a href="keys/dev.asc">0C6B 73F3 91FA 26F0 EBCD 1F75 C0F9 AEE5 6E47 D174</a>
           </p>
 
           <p>
