--- a/builds.html
+++ b/builds.html
@@ -45,10 +45,12 @@
           <p>
                Some packages are built with modifications to their PKGBUILD and/or other files, or different-than-default configuration options (click to see patches for that package):
                <ul>
-                    <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/linux-tkg-skylake" rel="noopener noreferrer" target="_blank">linux-tkg-skylake</a>: CFS CPU scheduler, schedutil CPU governor, tickless idle, fsync, NO futex2, -march=skylake<sup>[<a href="https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html" rel="noopener noreferrer" target="_blank">↗</a>]</sup></li>
-                    <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/linux-tkg-znver2" rel="noopener noreferrer" target="_blank">linux-tkg-znver2</a>: CFS CPU scheduler, schedutil CPU governor, tickless idle, fsync, NO futex2, -march=znver2<sup>[<a href="https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html" rel="noopener noreferrer" target="_blank">↗</a>]</sup></li>
-                    <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/plata-theme" rel="noopener noreferrer" target="_blank">plata-theme</a>: dark color scheme with green accents and disable desktop environments I don't use (<a href="plata-theme.jpg" rel="noopener noreferrer" target="_blank">screenshot</a>)</li>
-                    <li><a href="https://git.sr.ht/~krathalan/build-alterations/tree/master/wine-tkg-git-znver2" rel="noopener noreferrer" target="_blank">wine-tkg-git-znver2</a>: proton patches, disable futex2, -march=znver2<sup>[<a href="https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html" rel="noopener noreferrer" target="_blank">↗</a>]</sup></li>
+                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/linux-tkg-skylake" rel="noopener noreferrer" target="_blank">linux-tkg-skylake</a>: CFS CPU scheduler, schedutil CPU governor, tickless idle, fsync, NO futex2, -march=skylake<sup>[<a href="https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html" rel="noopener noreferrer" target="_blank">↗</a>]</sup></li>
+                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/linux-tkg-znver2" rel="noopener noreferrer" target="_blank">linux-tkg-znver2</a>: CFS CPU scheduler, schedutil CPU governor, tickless idle, fsync, NO futex2, -march=znver2<sup>[<a href="https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html" rel="noopener noreferrer" target="_blank">↗</a>]</sup></li>
+                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/nemo-no-gvfs" rel="noopener noreferrer" target="_blank">nemo-no-gvfs</a>: build of nemo file explorer without gvfs dependency</li>
+                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/plata-theme-krath-purple" rel="noopener noreferrer" target="_blank">plata-theme-krath-purple</a>: dark color scheme with purple accents and disable desktop environments I don't use (<a href="plata-theme-krath-purple.jpg" rel="noopener noreferrer" target="_blank">screenshot</a>)</li>
+                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/redshift-no-geoclue" rel="noopener noreferrer" target="_blank">redshift-no-geoclue</a>: build of redshift screen color adjuster without geoclue dependency</li>
+                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/wine-tkg-git-znver2" rel="noopener noreferrer" target="_blank">wine-tkg-git-znver2</a>: proton patches, disable futex2, -march=znver2<sup>[<a href="https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html" rel="noopener noreferrer" target="_blank">↗</a>]</sup></li>
                </ul>
           </p>
 
@@ -90,7 +92,7 @@
           <h4>Contact me</h4>
 
           <p>
-               About this repo/any hosted packages: <a href="mailto:dev@krathalan.net">srht@krathalan.net</a> / <a href="keys/dev.asc">0C6B 73F3 91FA 26F0 EBCD 1F75 C0F9 AEE5 6E47 D174</a>
+               About this repo/any hosted packages: <a href="mailto:dev@krathalan.net">dev@krathalan.net</a> / <a href="keys/dev.asc">0C6B 73F3 91FA 26F0 EBCD 1F75 C0F9 AEE5 6E47 D174</a>
           </p>
 
           <a href="https://liberapay.com/krathalan/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a>
