Update image url

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
           <h3><a href="https://github.com/krathalan/krack" rel="noopener noreferrer">krack</a></h3>
 
-          <img src="krack-build.webp" alt="Multiple terminal windows showing the output of: [krackctl watch-status], [krackctl failed-builds], [watch ccache -s], and [watch sensors]" width=80%>
+          <img src="krack.webp" alt="Multiple terminal windows showing the output of: [krackctl watch-status], [krackctl failed-builds], [watch ccache -s], and [watch sensors]" width=80%>
           <p>
                Krack is a set of programs for automated Arch Linux package builds, and powers builds.krathalan.net. Krack creates hooks at multiple points in the build process for each package that execute user-defined scripts, similar to pacman hooks but with less configuration required. Krack also includes advanced logging features that will help you easily diagnose any build problems.
           </p>
