--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
      <!--
           Error page for krathalan.net
-          Source: https://git.sr.ht/~krathalan/krathalan.net
+          Source: https://github.com/krathalan/krathalan.net
           Copyright (C) 2020 Hunter Peavey
 
           This program is free software: you can redistribute it and/or modify
