--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
      </head>
 
      <body>
+          <div id="header">
+               <h3>[<i class="fas fa-home"></i> Home] &nbsp; &nbsp; <a href="https://builds.krathalan.net/" rel="noopener noreferrer"><i class="fas fa-hammer"></i> Builds</a> &nbsp; &nbsp; <a href="https://github.com/krathalan" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> Github</a></h3>
+          </div>
+          <br><br>
           <div id="inner">
                <h1>Hunter Peavey</h1>
-               <h3>[Home] / <a href="https://builds.krathalan.net/" rel="noopener noreferrer">Builds</a></h3>
           </div>
 
           <p>
@@ -37,10 +40,6 @@
           </p>
 
           <h2>Projects</h2>
-
-          <p>
-               All of the software I make is available on <a href="https://github.com/krathalan" target="_blank" rel="noopener noreferrer">my Github</a>. The projects below are some of the projects I am most proud of.
-          </p>
 
           <h3><a href="https://github.com/krathalan/wtwitch" target="_blank" rel="noopener noreferrer">wtwitch</a></h3>
 
