Fix builds.html icons

--- a/builds.html
+++ b/builds.html
@@ -23,6 +23,7 @@
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Krath's builds</title>
+          <link rel='stylesheet' type='text/css' href='css/all.css'>
           <link rel='stylesheet' type='text/css' href='index.css'>
      </head>
 
