--- a/builds.html
+++ b/builds.html
@@ -29,12 +29,11 @@
 
      <body>
           <div id="header">
-               <h3><a href="https://krathalan.net/" rel="noopener noreferrer"><i class="fas fa-home"></i> Home</a> &nbsp; &nbsp; [<i class="fas fa-hammer"></i> Builds] &nbsp; &nbsp; <a href="https://github.com/krathalan" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> Github</a></h3>
+               <h3><a href="https://krathalan.net/" rel="noopener noreferrer"><i class="fas fa-home"></i> Home</a> &nbsp; &nbsp; [<i class="fas fa-hammer"></i> Builds] &nbsp; &nbsp; <a href="https://github.com/krathalan" rel="noopener noreferrer"><i class="fab fa-github"></i> Github</a></h3>
           </div>
           <br><br>
           <div id="inner">
                <h1>Krath's builds</h1>
-               <h3><a href="https://krathalan.net/" rel="noopener noreferrer">Home</a> / [Builds]</h3>
           </div>
 
           <p>
